--- a/front_src/package.json
+++ b/front_src/package.json
@@ -14,6 +14,7 @@
     "grunt-contrib-watch": "^0.6.1",
     "grunt-dev-update": "^1.1.0",
     "grunt-sass": "^0.18.1",
+    "grunt-sprity": "^1.0.0",
     "matchdep": "^0.3.0"
   }
 }
