--- a/front_src/package.json
+++ b/front_src/package.json
@@ -4,19 +4,23 @@
   "description": "",
   "private": true,
   "devDependencies": {
+    "autoprefixer": "^6.1.2",
     "grunt": "^0.4.5",
     "grunt-browser-sync": "^2.0.0",
     "grunt-combine-media-queries": "^1.0.19",
     "grunt-contrib-concat": "^0.5.1",
-    "grunt-contrib-cssmin": "^0.12.2",
-    "grunt-contrib-imagemin": "^0.9.3",
-    "grunt-contrib-uglify": "^0.8.0",
+    "grunt-contrib-cssmin": "^0.14.0",
+    "grunt-contrib-imagemin": "^1.0.0",
+    "grunt-contrib-uglify": "^0.11.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-dev-update": "^1.1.0",
-    "grunt-sass": "^0.18.1",
+    "grunt-postcss": "^0.7.1",
+    "grunt-sass": "^1.1.0",
     "grunt-sprity": "^1.0.0",
     "jit-grunt": "^0.9.1",
-    "matchdep": "^0.3.0",
+    "lost": "^6.6.2",
+    "pixrem": "^3.0.0",
+    "postcss-responsive-type": "^0.3.2",
     "time-grunt": "^1.2.1"
   }
 }
